--- a/index.html
+++ b/index.html
@@ -34,6 +34,21 @@
             font-size: 28px;
         }
 
+        .login-section {
+            text-align: center;
+            padding: 60px 20px;
+        }
+
+        .login-section h2 {
+            color: #333;
+            margin-bottom: 20px;
+        }
+
+        .login-section p {
+            color: #666;
+            margin-bottom: 30px;
+        }
+
         .section {
             margin-bottom: 30px;
             padding: 20px;
@@ -61,6 +76,20 @@
         button:disabled {
             opacity: 0.6;
             cursor: not-allowed;
+        }
+
+        .btn-github {
+            background: #24292e;
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+        }
+
+        .btn-github:hover {
+            background: #1a1e22;
+            transform: translateY(-2px);
         }
 
         .btn-primary {
@@ -93,6 +122,16 @@
         .btn-buy:hover {
             background: #ff5252;
             transform: translateY(-2px);
+        }
+
+        .btn-logout {
+            background: #6c757d;
+            color: white;
+            margin-top: 20px;
+        }
+
+        .btn-logout:hover {
+            background: #5a6268;
         }
 
         .code-display {
@@ -146,6 +185,27 @@
             margin-top: 5px;
         }
 
+        .user-info {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 15px;
+            background: #e9ecef;
+            border-radius: 8px;
+            margin-bottom: 20px;
+        }
+
+        .user-avatar {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+        }
+
+        .user-name {
+            font-weight: bold;
+            color: #333;
+        }
+
         .message {
             padding: 12px;
             border-radius: 8px;
@@ -172,187 +232,189 @@
         .hidden {
             display: none;
         }
-
-        .config-section {
-            background: #fff3cd;
-            border: 2px solid #ffc107;
-            padding: 15px;
-            border-radius: 8px;
-            margin-bottom: 20px;
-        }
-
-        .config-section h3 {
-            color: #856404;
-            margin-bottom: 10px;
-            font-size: 16px;
-        }
-
-        .config-section p {
-            color: #856404;
-            font-size: 14px;
-            margin-bottom: 10px;
-        }
-
-        .config-section button {
-            margin-top: 10px;
-        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>🎬 Sora2 邀请码自助系统</h1>
 
-        <!-- 配置区域 -->
-        <div id="configSection" class="config-section">
-            <h3>⚙️ 首次使用配置</h3>
-            <p>请输入您的 GitHub Gist 信息（仅需配置一次）</p>
-            <input type="text" id="gistIdInput" placeholder="输入 Gist ID" />
-            <input type="password" id="tokenInput" placeholder="输入 GitHub Token (可选，留空则只读)" />
-            <button class="btn-primary" onclick="saveConfig()">保存配置</button>
+        <!-- 登录界面 -->
+        <div id="loginSection" class="login-section">
+            <h2>欢迎使用</h2>
+            <p>请先使用 GitHub 账号登录后才能获取邀请码</p>
+            <button class="btn-github" onclick="loginWithGitHub()">
+                <svg width="20" height="20" viewBox="0 0 16 16" fill="currentColor">
+                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"/>
+                </svg>
+                使用 GitHub 登录
+            </button>
         </div>
 
-        <div class="stats">
-            <div class="stats-number" id="availableCount">-</div>
-            <div class="stats-label">可用邀请码数量</div>
-        </div>
-
-        <!-- 获取邀请码 -->
-        <div class="section">
-            <h2>📥 获取邀请码</h2>
-            <button class="btn-primary" onclick="getInviteCode()" id="getBtn">立即获取邀请码</button>
-            <div id="codeDisplay" class="code-display hidden">
-                <div>您的邀请码：</div>
-                <div class="code-text" id="codeText"></div>
+        <!-- 主界面（登录后显示） -->
+        <div id="mainSection" class="hidden">
+            <!-- 用户信息 -->
+            <div class="user-info">
+                <img id="userAvatar" class="user-avatar" src="" alt="avatar">
+                <div>
+                    <div class="user-name" id="userName"></div>
+                    <div style="font-size: 12px; color: #666;" id="userLogin"></div>
+                </div>
             </div>
-            <div id="getMessage" class="message hidden"></div>
-        </div>
 
-        <!-- 归还邀请码 -->
-        <div class="section">
-            <h2>♻️ 归还邀请码</h2>
-            <input type="text" id="returnCode" placeholder="请输入要归还的邀请码" />
-            <button class="btn-secondary" onclick="returnInviteCode()" id="returnBtn">归还邀请码</button>
-            <div id="returnMessage" class="message hidden"></div>
-        </div>
+            <div class="stats">
+                <div class="stats-number" id="availableCount">-</div>
+                <div class="stats-label">可用邀请码数量</div>
+            </div>
 
-        <!-- 购买邀请码 -->
-        <div class="section">
-            <h2>🛒 购买邀请码</h2>
-            <p style="color: #666; margin-bottom: 15px; text-align: center;">
-                没有可用邀请码？立即购买
-            </p>
-            <button class="btn-buy" onclick="buyInviteCode()">前往购买</button>
+            <!-- 获取邀请码 -->
+            <div class="section">
+                <h2>📥 获取邀请码</h2>
+                <button class="btn-primary" onclick="getInviteCode()" id="getBtn">立即获取邀请码</button>
+                <div id="codeDisplay" class="code-display hidden">
+                    <div>您的邀请码：</div>
+                    <div class="code-text" id="codeText"></div>
+                </div>
+                <div id="getMessage" class="message hidden"></div>
+            </div>
+
+            <!-- 归还邀请码 -->
+            <div class="section">
+                <h2>♻️ 归还邀请码</h2>
+                <input type="text" id="returnCode" placeholder="请输入要归还的邀请码" />
+                <button class="btn-secondary" onclick="returnInviteCode()" id="returnBtn">归还邀请码</button>
+                <div id="returnMessage" class="message hidden"></div>
+            </div>
+
+            <!-- 购买邀请码 -->
+            <div class="section">
+                <h2>🛒 购买邀请码</h2>
+                <p style="color: #666; margin-bottom: 15px; text-align: center;">
+                    没有可用邀请码？立即购买
+                </p>
+                <button class="btn-buy" onclick="buyInviteCode()">前往购买</button>
+            </div>
+
+            <button class="btn-logout" onclick="logout()">退出登录</button>
         </div>
     </div>
 
     <script>
-        // 配置存储 key
-        const CONFIG_KEY = 'sora2_gist_config';
+        // 配置 - 部署到 Vercel 后会自动使用正确的 API 地址
+        const API_BASE = window.location.origin;
 
-        let GIST_ID = '';
-        let GITHUB_TOKEN = '';
+        // 这个需要在 Vercel 环境变量中设置，前端从 API 获取
+        let GITHUB_CLIENT_ID = '';
 
-        // 初始化配置
-        function initConfig() {
-            const config = localStorage.getItem(CONFIG_KEY);
-            if (config) {
-                const parsed = JSON.parse(config);
-                GIST_ID = parsed.gistId || '';
-                GITHUB_TOKEN = parsed.token || '';
+        // OAuth 参数存储
+        const TOKEN_KEY = 'github_access_token';
+        const USER_KEY = 'github_user_info';
 
-                if (GIST_ID) {
-                    document.getElementById('configSection').classList.add('hidden');
-                    updateStats();
-                }
+        // 初始化，获取 GitHub Client ID
+        async function initApp() {
+            try {
+                const response = await fetch(`${API_BASE}/api/config`);
+                const data = await response.json();
+                GITHUB_CLIENT_ID = data.clientId;
+            } catch (error) {
+                console.error('获取配置失败:', error);
             }
+            checkAuth();
         }
 
-        // 保存配置
-        function saveConfig() {
-            const gistId = document.getElementById('gistIdInput').value.trim();
-            const token = document.getElementById('tokenInput').value.trim();
+        // 检查登录状态
+        function checkAuth() {
+            const token = localStorage.getItem(TOKEN_KEY);
+            const user = localStorage.getItem(USER_KEY);
 
-            if (!gistId) {
-                alert('请输入 Gist ID');
-                return;
+            if (token && user) {
+                showMainSection(JSON.parse(user));
+                return true;
             }
 
-            GIST_ID = gistId;
-            GITHUB_TOKEN = token;
+            // 检查 URL 中是否有 code（OAuth 回调）
+            const urlParams = new URLSearchParams(window.location.search);
+            const code = urlParams.get('code');
 
-            localStorage.setItem(CONFIG_KEY, JSON.stringify({
-                gistId: GIST_ID,
-                token: GITHUB_TOKEN
-            }));
+            if (code) {
+                handleOAuthCallback(code);
+                return false;
+            }
 
-            document.getElementById('configSection').classList.add('hidden');
+            showLoginSection();
+            return false;
+        }
+
+        // 显示登录界面
+        function showLoginSection() {
+            document.getElementById('loginSection').classList.remove('hidden');
+            document.getElementById('mainSection').classList.add('hidden');
+        }
+
+        // 显示主界面
+        function showMainSection(user) {
+            document.getElementById('loginSection').classList.add('hidden');
+            document.getElementById('mainSection').classList.remove('hidden');
+
+            document.getElementById('userAvatar').src = user.avatar_url;
+            document.getElementById('userName').textContent = user.name || user.login;
+            document.getElementById('userLogin').textContent = '@' + user.login;
+
             updateStats();
         }
 
-        // 获取 Gist 数据
-        async function getGistData() {
-            if (!GIST_ID) {
-                throw new Error('请先配置 Gist ID');
+        // GitHub OAuth 登录
+        function loginWithGitHub() {
+            if (!GITHUB_CLIENT_ID) {
+                alert('系统配置错误，请联系管理员');
+                return;
             }
-
-            const headers = {
-                'Accept': 'application/vnd.github.v3+json'
-            };
-
-            if (GITHUB_TOKEN) {
-                headers['Authorization'] = `token ${GITHUB_TOKEN}`;
-            }
-
-            const response = await fetch(`https://api.github.com/gists/${GIST_ID}`, {
-                headers: headers
-            });
-
-            if (!response.ok) {
-                throw new Error('获取 Gist 数据失败');
-            }
-
-            const data = await response.json();
-            const content = data.files['invite-codes.json'].content;
-            return JSON.parse(content);
+            const redirectUri = window.location.origin + window.location.pathname;
+            const authUrl = `https://github.com/login/oauth/authorize?client_id=${GITHUB_CLIENT_ID}&redirect_uri=${encodeURIComponent(redirectUri)}&scope=user:email`;
+            window.location.href = authUrl;
         }
 
-        // 更新 Gist 数据
-        async function updateGistData(data) {
-            if (!GIST_ID) {
-                throw new Error('请先配置 Gist ID');
+        // 处理 OAuth 回调
+        async function handleOAuthCallback(code) {
+            try {
+                const response = await fetch(`${API_BASE}/api/auth`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ code })
+                });
+
+                const data = await response.json();
+
+                if (response.ok) {
+                    localStorage.setItem(TOKEN_KEY, data.access_token);
+                    localStorage.setItem(USER_KEY, JSON.stringify(data.user));
+
+                    // 清除 URL 中的 code 参数
+                    window.history.replaceState({}, document.title, window.location.pathname);
+
+                    showMainSection(data.user);
+                } else {
+                    alert('登录失败：' + data.error);
+                    showLoginSection();
+                }
+            } catch (error) {
+                console.error('OAuth Error:', error);
+                alert('登录失败，请重试');
+                showLoginSection();
             }
-
-            if (!GITHUB_TOKEN) {
-                throw new Error('需要 GitHub Token 才能修改数据');
-            }
-
-            const response = await fetch(`https://api.github.com/gists/${GIST_ID}`, {
-                method: 'PATCH',
-                headers: {
-                    'Accept': 'application/vnd.github.v3+json',
-                    'Authorization': `token ${GITHUB_TOKEN}`,
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    files: {
-                        'invite-codes.json': {
-                            content: JSON.stringify(data, null, 2)
-                        }
-                    }
-                })
-            });
-
-            if (!response.ok) {
-                throw new Error('更新 Gist 数据失败');
-            }
-
-            return true;
         }
 
-        // 更新统计显示
+        // 退出登录
+        function logout() {
+            localStorage.removeItem(TOKEN_KEY);
+            localStorage.removeItem(USER_KEY);
+            showLoginSection();
+        }
+
+        // 更新统计
         async function updateStats() {
             try {
-                const data = await getGistData();
+                const response = await fetch(`${API_BASE}/api/codes`);
+                const data = await response.json();
                 const count = data.filter(c => c.available).length;
                 document.getElementById('availableCount').textContent = count;
             } catch (error) {
@@ -370,34 +432,37 @@
             btn.disabled = true;
 
             try {
-                const data = await getGistData();
-                const available = data.find(c => c.available);
+                const token = localStorage.getItem(TOKEN_KEY);
+                const response = await fetch(`${API_BASE}/api/codes`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${token}`
+                    },
+                    body: JSON.stringify({ action: 'claim' })
+                });
 
-                if (!available) {
+                const data = await response.json();
+
+                if (response.ok) {
+                    document.getElementById('codeText').textContent = data.code;
+                    display.classList.remove('hidden');
+
+                    message.textContent = '获取成功！请妥善保管您的邀请码';
+                    message.className = 'message success';
+                    message.classList.remove('hidden');
+
+                    updateStats();
+                } else {
                     display.classList.add('hidden');
-                    message.textContent = '暂无可用邀请码，请购买或稍后再试';
+                    message.textContent = data.error || '获取失败';
                     message.className = 'message error';
                     message.classList.remove('hidden');
-                    return;
                 }
-
-                available.available = false;
-                available.claimedAt = new Date().toISOString();
-
-                await updateGistData(data);
-
-                document.getElementById('codeText').textContent = available.code;
-                display.classList.remove('hidden');
-
-                message.textContent = '获取成功！请妥善保管您的邀请码';
-                message.className = 'message success';
-                message.classList.remove('hidden');
-
-                updateStats();
             } catch (error) {
                 console.error('获取邀请码失败:', error);
                 display.classList.add('hidden');
-                message.textContent = error.message || '操作失败，请稍后重试';
+                message.textContent = '网络错误，请稍后重试';
                 message.className = 'message error';
                 message.classList.remove('hidden');
             } finally {
@@ -427,37 +492,32 @@
             btn.disabled = true;
 
             try {
-                const data = await getGistData();
-                const found = data.find(c => c.code.toUpperCase() === code);
+                const token = localStorage.getItem(TOKEN_KEY);
+                const response = await fetch(`${API_BASE}/api/codes`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${token}`
+                    },
+                    body: JSON.stringify({ action: 'return', code })
+                });
 
-                if (!found) {
-                    message.textContent = '无效的邀请码';
+                const data = await response.json();
+
+                if (response.ok) {
+                    message.textContent = '归还成功！感谢您的贡献';
+                    message.className = 'message success';
+                    updateStats();
+                    input.value = '';
+                } else {
+                    message.textContent = data.error || '归还失败';
                     message.className = 'message error';
-                    message.classList.remove('hidden');
-                    return;
                 }
 
-                if (found.available) {
-                    message.textContent = '该邀请码已在池中，无需重复归还';
-                    message.className = 'message warning';
-                    message.classList.remove('hidden');
-                    return;
-                }
-
-                found.available = true;
-                found.returnedAt = new Date().toISOString();
-
-                await updateGistData(data);
-
-                message.textContent = '归还成功！感谢您的贡献';
-                message.className = 'message success';
                 message.classList.remove('hidden');
-
-                updateStats();
-                input.value = '';
             } catch (error) {
                 console.error('归还邀请码失败:', error);
-                message.textContent = error.message || '操作失败，请稍后重试';
+                message.textContent = '网络错误，请稍后重试';
                 message.className = 'message error';
                 message.classList.remove('hidden');
             } finally {
@@ -475,7 +535,7 @@
         }
 
         // 页面加载时初始化
-        initConfig();
+        initApp();
     </script>
 </body>
 </html>
